RESOLVED FIXED95870
[BlackBerry] Rotation and then reload causes less sized webpage (PR 190469)
https://bugs.webkit.org/show_bug.cgi?id=95870
Summary [BlackBerry] Rotation and then reload causes less sized webpage (PR 190469)
Leo Yang
Reported 2012-09-05 10:39:18 PDT
1. Load a page say google.com in portrait mode. 2. Rotate to landscape mode. 3. Rotate back to portrait mode. 4. Reload the page. Actual result: The page can't fully fill the content area.
Attachments
Patch (3.11 KB, patch)
2012-09-05 10:45 PDT, Leo Yang
staikos: review+
Leo Yang
Comment 1 2012-09-05 10:45:26 PDT
Leo Yang
Comment 2 2012-09-05 12:17:17 PDT
Note You need to log in before you can comment on or make changes to this bug.